[package]
name = "backup_watcher"
version = "0.1.0"
authors = ["James Burnworth <j.j.burnworth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
zip = "0.5"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.59"
